<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/googleSignInButton"
        android:layout_width="241dp"
        android:layout_height="67dp"
        android:background="@drawable/common_google_signin_btn_icon_dark"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

    <TextView
        android:id="@+id/appTitleTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:layout_marginStart="39dp"
        android:fontFamily="@font/archivo_narrow"
        android:text="FairFare"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/googleSignInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232" />

    <EditText
        android:id="@+id/emailTextViewId"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitleTextViewId" />

    <EditText
        android:id="@+id/passwordTextViewId"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/signInButtonId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextViewId" />

    <Button
        android:id="@+id/signInButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/googleSignInButton"
        app:layout_constraintEnd_toStartOf="@+id/signUpButtonId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextViewId" />

    <Button
        android:id="@+id/signUpButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="71dp"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="@+id/signInButtonId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signInButtonId"
        app:layout_constraintTop_toTopOf="@+id/signInButtonId"
        app:layout_constraintVertical_bias="0.576" />

    <TextView
        android:id="@+id/orLabelTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="185dp"
        android:layout_marginStart="186dp"
        android:layout_marginTop="84dp"
        android:text="or"
        app:layout_constraintBottom_toTopOf="@+id/googleSignInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextViewId"
        app:layout_constraintVertical_bias="0.894" />

    <TextView
        android:id="@+id/appSloganLabelId"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="43dp"
        android:text="@string/app_slogan"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/emailTextViewId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitleTextViewId" />
</android.support.constraint.ConstraintLayout>